# openglapp

./: CMakeLists.txt
src/: App.cpp  App.h  Application.cpp  Application.h  Assets.h  Shader.cpp  Shader.h  main.cpp  util.h
src/assets/shaders/: pbrmaterial.vert.glsl  screen.frag.glsl  screen.vert.glsl
src/framework/: Application.cpp  Application.h  Assets.cpp  Assets.h  Shader.cpp  Shader.h
